gcc-defaults (1.30) unstable; urgency=low

  * Fix gfortran prerm script (closes: #334081).
  * Clarify gfortran package description (closes: #333348).
  * Remove version number of release, picky RM ... (closes: #321092).

 -- Matthias Klose <doko@debian.org>  Sat, 15 Oct 2005 13:21:43 +0000

gcc-defaults (1.29) unstable; urgency=low

  * Depend on the 4.0.2 final release.
  * Build gfortran for m68k.

 -- Matthias Klose <doko@debian.org>  Mon,  3 Oct 2005 22:28:43 +0000

gcc-defaults (1.28) unstable; urgency=low

  * Change build system to allow upload of versions of the form
    [0-9]+.[0-9]+<anything>.

 -- Matthias Klose <doko@debian.org>  Sat,  6 Aug 2005 01:09:15 +0200

gcc-defaults (1.27) unstable; urgency=high

  * Fix build for platforms with some compilers missing.

 -- Matthias Klose <doko@debian.org>  Wed,  3 Aug 2005 19:09:10 +0200

gcc-defaults (1.26) unstable; urgency=high

  * Depend on the 4.0.1 final release.
  * debian/control.m4: Remove.
  * debian/control: Add substitution variables.
  * debian/rules: Generate debian/*.substvars.

 -- Matthias Klose <doko@debian.org>  Thu, 21 Jul 2005 15:30:16 +0200

gcc-defaults (1.24) unstable; urgency=low

  * Build-depend on dpkg-dev (>= 1.13.9).

 -- Matthias Klose <doko@debian.org>  Fri,  8 Jul 2005 11:44:26 +0000

gcc-defaults (1.23) unstable; urgency=high

  * Make gcc-4.0 the default C compiler, g++-4.0 the default C++ compiler,
    gobjc-4.0 the default ObjC compiler, treelang-4.0 the default Treelang
    compiler, gcj-4.0 the default compiler for the Java language, and gij-4.0
    the default for the bytecode interpreter.
  * Add gfortran package, depending on gfortran-4.0, not available for m68k.
  * Make g77-3.4 the default for g77, gpc-3.4 the default for gpc.
  * Add gjnih default (gcj package).
  * gfortran: Add alternative for f95.
  * Depend on the 3.4.4-4 and 4.0.0-11 versions (4.0.0-12 on sparc and hppa).
  * gij: Provide java-virtual-machine, java-runtime and java1-runtime.